[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/System/BuildIllusion.gd" type="Script" id=1]
[ext_resource path="res://src/SelectionSystem/SelectionSystem.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/System/PlayerController.gd" type="Script" id=3]
[ext_resource path="res://src/System/PlayerCanvasLayer.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]

[node name="PlayerController" type="Node2D"]
script = ExtResource( 3 )

[node name="CameraSystem" type="Camera2D" parent="."]
current = true

[node name="BuildIllusion" type="Sprite" parent="."]
visible = false
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="BuildIllusion"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildIllusion/Area2D"]
shape = SubResource( 1 )

[node name="SelectionSystem" parent="." instance=ExtResource( 2 )]

[node name="PlayerCanvasLayer" parent="." instance=ExtResource( 5 )]
[connection signal="body_entered" from="BuildIllusion/Area2D" to="BuildIllusion" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="BuildIllusion/Area2D" to="BuildIllusion" method="_on_Area2D_body_exited"]
[connection signal="selected_unit_changed" from="SelectionSystem" to="PlayerCanvasLayer" method="_on_SelectionSystem_selected_unit_changed"]
